--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="search-bar-table">
             <div class="search-bar-tablecell">
                 <div class="search-bar-inner">
-                    <h2>Search</h2>
+                    <h2>Seasssrch</h2>
                     <form action="#">
                         <input type="search" placeholder="Type Keywords">
                         <button type="submit">Search</button>
@@ -330,7 +330,7 @@
                         </div>
                         <div class="footer-menu">
                             <ul>
-                                <li><a href="./index.html">Home</a></li>
+                                <li><a href="./index.html">Homedddd</a></li>
                                 <li><a href="#">About us</a></li>
                                 <li><a href="#">Classes</a></li>
                                 <li><a href="#">Instructors</a></li>
