--- a/index.html
+++ b/index.html
@@ -331,9 +331,9 @@
                         <div class="footer-menu">
                             <ul>
                                 <li><a href="./index.html">Homedddd</a></li>
-                                <li><a href="#">About us</a></li>
+                                <li><a href="#">About sadasdasdus</a></li>
                                 <li><a href="#">Classes</a></li>
-                                <li><a href="#">Instructors</a></li>
+                                <li><a href="#">Instraaauctors</a></li>
                                 <li><a href="#">News</a></li>
                                 <li><a href="#">Contact</a></li>
                             </ul>
@@ -341,7 +341,7 @@
                         <div class="subscribe-form">
                             <form action="#">
                                 <input type="text" placeholder="your Email">
-                                <button type="submit">Sign Up</button>
+                                <button type="submit">Sigsssn Up</button>
                             </form>
                         </div>
                         <div class="social-links">
