--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         </div>
                         <nav class="mobile-menu">
                             <ul>
-                                <li><a href="./index.html">Home</a></li>
+                                <li><a href="./index.html">Homeddd</a></li>
                                 <li><a href="./about-us.html">About us</a></li>
                                 <li><a href="./classes.html">Classes</a></li>
                                 <li><a href="./elements.html">Instructors</a></li>
@@ -333,7 +333,7 @@
                                 <li><a href="./index.html">Homedddd</a></li>
                                 <li><a href="#">About sadasdasdus</a></li>
                                 <li><a href="#">Classes</a></li>
-                                <li><a href="#">Instraaauctors</a></li>
+                                <li><a href="#">Instructors</a></li>
                                 <li><a href="#">News</a></li>
                                 <li><a href="#">Contact</a></li>
                             </ul>
