--- a/index2.html
+++ b/index2.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
     <link rel="stylesheet" href="css/barfiller.css" type="text/css">
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
-    <link rel="stylesheet" href="css/style2.css" type="text/css">
+    <link rel="stylesheet" href="css/style3.css" type="text/css">
 </head>
 
 <body>
@@ -73,35 +73,33 @@
     </section>
     <!-- Search Bar End -->
     <!-- Top Social Begin -->
-    <div class="top-social">
-        <div class="top-social-links">
-            <ul>
-                <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                <li><a href="#"><i class="fa fa-behance"></i></a></li>
-            </ul>
-        </div>
-    </div>
+
     <!-- Top Social End -->
     <!-- Hero Slider Section Begin -->
     <section class="hero-slider">
         <div class="slide-items owl-carousel">
             <div class="single-slide set-bg active" data-setbg="img/bg.jpg">
-                <a href="https://www.youtube.com/watch?v=SEVuD_djKrU" class="play-btn pop-up"><i class="fa fa-play"></i></a>
-                <h1>Be Fit.Top Gym</h1>
-                <a href="#" class="primary-btn">Read More</a>
+         
+                <h1 style="color: #5FBF86  "  >SM POS</h1>
+                <h3 style="color: #5FBF86  "  >FACTURAS POS <br>
+                    CLIENTES  - INVENTARIO <br>
+                    INFORMES   - 3 USUARIOS
+                    <br>SIN LIMITES DE USO</h3><br>
+                <a href="#" class="primary-btn">Es GRATIS descargalo AQUI</a>
             </div>
             <div class="single-slide set-bg" data-setbg="img/bg-2.jpg">
-                <a href="https://www.youtube.com/watch?v=SEVuD_djKrU" class="play-btn pop-up"><i class="fa fa-play"></i></a>
-                <h1>Be Fit.Top Trainer</h1>
-                <a href="#" class="primary-btn">Read More</a>
+                <h1>SM RESTAURANTES</h1><br>
+                <h3 style="color: #5FBF86  "  >FACTURAS POS - COMANDAS <br>
+                    CLIENTES  - INVENTARIO 
+                    INFORMES   - 3 USUARIOS- SIN LIMITES DE USO</h3><br>
+                <a href="#" class="primary-btn">Es GRATIS descargalo AQUI</a>
             </div>
-            <div class="single-slide set-bg" data-setbg="img/bg-3.jpg">
-                <a href="https://www.youtube.com/watch?v=SEVuD_djKrU" class="play-btn pop-up"><i class="fa fa-play"></i></a>
-                <h1>Be Fit.Top Body</h1>
-                <a href="#" class="primary-btn">Read More</a>
+            <div class="single-slide set-bg" data-setbg="img/bg-2.jpg">
+                <h1>SM SERVICIOS TÉCNICOS</h1>
+                <h3 style="color: #5FBF86  "  >FACTURAS POS - ORDENES DE SERVICIO TÉNCICO <br>
+                    CLIENTES  - INVENTARIO 
+                    INFORMES   - 3 USUARIOS- SIN LIMITES DE USO</h3><br>
+                <a href="#" class="primary-btn">Es GRATIS descargalo AQUI</a>
             </div>
         </div>
     </section>   
