--- a/index2.html
+++ b/index2.html
@@ -78,29 +78,53 @@
     <!-- Hero Slider Section Begin -->
     <section class="hero-slider">
         <div class="slide-items owl-carousel">
-            <div class="single-slide set-bg active" data-setbg="img/bg.jpg">
+            <div class="single-slide set-bg active" data-setbg="img/bg-2.jpg">
          
-                <h1 style="color: #5FBF86  "  >SM POS</h1>
-                <h3 style="color: #5FBF86  "  >FACTURAS POS <br>
-                    CLIENTES  - INVENTARIO <br>
-                    INFORMES   - 3 USUARIOS
-                    <br>SIN LIMITES DE USO</h3><br>
-                <a href="#" class="primary-btn">Es GRATIS descargalo AQUI</a>
+                <h1 style="color: #2408c2  "  >SM POS</h1>
+                <h3 style="color: #2408c2  "  >FACTURAS POS <br>
+                    PRODUCTOS CON IMAGENES <br>
+                    CREA TUS FACTURAS DE <br>MANERA SENCILLA
+                    </h3><br>
+                <a target="_blank" href="https://github.com/sm-software-colombia/sm-pos" class="primary-btn">Es GRATIS descargalo AQUÍ</a>
             </div>
-            <div class="single-slide set-bg" data-setbg="img/bg-2.jpg">
-                <h1>SM RESTAURANTES</h1><br>
-                <h3 style="color: #5FBF86  "  >FACTURAS POS - COMANDAS <br>
-                    CLIENTES  - INVENTARIO 
-                    INFORMES   - 3 USUARIOS- SIN LIMITES DE USO</h3><br>
-                <a href="#" class="primary-btn">Es GRATIS descargalo AQUI</a>
+         <div class="single-slide set-bg" data-setbg="img/bg-3.jpg">
+            <h1 style="color: #2408c2  "  >SM POS</h1>
+            <h3 style="color: #2408c2  "  >INVENTARIO<br>
+                CLIENTES <br> INFORMES<br>
+                3 USUARIOS<br>
+                            </h3><br>
+            <a target="_blank" href="https://github.com/sm-software-colombia/sm-pos" class="primary-btn">Es GRATIS descargalo AQUÍ</a>
             </div>
-            <div class="single-slide set-bg" data-setbg="img/bg-2.jpg">
+       <!---        <div class="single-slide set-bg" data-setbg="iimg/bg.jpg">
                 <h1>SM SERVICIOS TÉCNICOS</h1>
-                <h3 style="color: #5FBF86  "  >FACTURAS POS - ORDENES DE SERVICIO TÉNCICO <br>
+                <h3 style="color: #2408c2  "  >FACTURAS POS - ORDENES DE SERVICIO TÉNCICO <br>
                     CLIENTES  - INVENTARIO 
                     INFORMES   - 3 USUARIOS- SIN LIMITES DE USO</h3><br>
                 <a href="#" class="primary-btn">Es GRATIS descargalo AQUI</a>
             </div>
+            <div class="single-slide set-bg active" data-setbg="img/bg-2.jpg">
+         
+                <h1 style="color: #2408c2  "  >SM POS</h1>
+                <h3 style="color: #2408c2  "  >FACTURAS POS <br>
+                    PRODUCTOS CON IMAGENES <br>
+                    CREA TUS FACTURAS DE MANERA SENCILLA
+                    </h3><br>
+                <a href="#" class="primary-btn">Es GRATIS descargalo AQUI</a>
+            </div>
+            <div class="single-slide set-bg" data-setbg="img/bg.jpg">
+                <h1>SM RESTAURANTES</h1><br>
+                <h3 style="color: #2408c2  "  >FACTURAS POS - COMANDAS <br>
+                    CLIENTES  - INVENTARIO 
+                    INFORMES   - 3 USUARIOS- SIN LIMITES DE USO</h3><br>
+                <a href="#" class="primary-btn">Es GRATIS descargalo AQUI</a>
+            </div>
+            <div class="single-slide set-bg" data-setbg="iimg/bg.jpg">
+                <h1>SM SERVICIOS TÉCNICOS</h1>
+                <h3 style="color: #2408c2  "  >FACTURAS POS - ORDENES DE SERVICIO TÉNCICO <br>
+                    CLIENTES  - INVENTARIO 
+                    INFORMES   - 3 USUARIOS- SIN LIMITES DE USO</h3><br>
+                <a href="#" class="primary-btn">Es GRATIS descargalo AQUI</a>
+            </div>-->
         </div>
     </section>   
     <!-- Hero Slider End -->
