--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         </div>
                        
                         <div class="member-signup-btn">
-                            <a href="https://docs.google.com/forms/d/e/1FAIpQLScGZ34Y_P1NpNYEV4H74alBrO3ZLMTMdkLP7lCojnbSQJ01Vg/viewform?usp=sf_link" target="_blank" class="primary-btn">Solicitar</a>
+                            <a href="https://form.123formbuilder.com/6734441/1000" target="_blank" class="primary-btn">Solicitar</a>
                         </div>
                     </div>
                 </div><div class="col-lg-4 col-md-12">
